
--------------------------------------------------------------------------------
Changes for 2.4.5rc1

New features:
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Italian and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-9394] fixed SMS sending with Teltonika modems (asaveljevs)
........S. [ZBX-3507] fixed SMS sending with Huawei GSM modems (asaveljevs)
.......PS. [ZBX-7446] fixed vmware.hv.status item always returning 0 (gray) status (wiper)
A......... [ZBX-9346] fixed importing trigger dependencies and maps that contain the triggers expressions with old style operators (Ivo)
...G...... [ZBX-9410] fixed agent logging to eventlog (syslog option) on Windows (wiper)
A.F....... [ZBX-9365] fixed array_combine() function giving a warning message for PHP versions < 5.4.0 (Ivo)
..F....... [ZBX-9395] fixed overview triggers and data page to display results when the option to select first dropdown entry is set to "None" and a group is selected (Ivo)
..F....... [ZBX-9402] fixed trigger list sorting (Ivo)
..F....... [ZBX-9102] fixed "System status" dashboard widget performing poorly (Ivo)
A......... [ZBX-5656] fixed maintenance.create and maintenance.update methods "timeperiods" parameter to be an array of arrays (Ivo)
....I....T [ZBX-9331] changed value type of system.stat[kthr,*] items in "Template OS AIX" to float and added them to "Performance" application (asaveljevs)
........S. [ZBX-9368] fixed possible SQL errors when linking of several templates (Sasha)
A.F....... [ZBX-9343] fixed user ID being zero in audit logs for login/logout actions (Ivo)
..F....... [ZBX-9375] renamed "Latest events" to "Events" in menu popup for trigger map elements and fixed its link not setting corresponding trigger in filter (Ivo)
...G...PS. [ZBX-9251] added missing socket closing to avoid large number of opened sockets (igors)